# core

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  THIRD_PARTY_NOTICES.md  dll_example.cpp  project_example_01.yml  project_example_02.yml
.github/workflows/: ci_build.yml  ci_format.yml
cli/: CMakeLists.txt  cli.cpp
include/prismcascade/: prismcascade.hpp
include/prismcascade/ast/: diff.hpp  edge.hpp  macro.hpp  node.hpp  operations.hpp  transform_ast.hpp  transformer.hpp
include/prismcascade/common/: abi.hpp  types.hpp
include/prismcascade/memory/: time.hpp  types_internal.hpp
include/prismcascade/plugin/: dll_memory_manager.hpp  dynamic_library.hpp  handle_manager.hpp  plugin_manager.hpp
include/prismcascade/scheduler/: audio_ring.hpp  delay.hpp  exec_queue.hpp  live_controller.hpp  rendering_scheduler.hpp  scalar_cache.hpp  scheduler.hpp  split_dag.hpp  time.hpp  topological_sort.hpp  video_cache.hpp
include/prismcascade/util/: dump.hpp
sample_plugins/: CMakeLists.txt  count_plugin.cpp  sum_plugin.cpp  twice_plugin.cpp
scripts_dev/: linux_build_dll.bash  linux_clang_format.bash  linux_run.bash  win_build_dll.bat  win_clang_format.bat  win_run.bat
src/: CMakeLists.txt
src/ast/: ast_diff.hpp  ast_edge.hpp  ast_macro.hpp  ast_node.hpp  ast_operations.hpp  ast_transformer.hpp  ast_ui.hpp  node.cpp  operations.cpp  transform_ast.cpp  transformer.cpp
src/common/: types.hpp
src/core/: project_data.cpp  project_data.hpp  project_loader.hpp  timeline_manager.cpp  timeline_manager.hpp
src/memory/: cache_manager.hpp  memory_allocator.hpp  memory_manager.cpp  memory_manager.hpp  types_internal.cpp
src/plugin/: data_types.hpp  dll_memory_manager.cpp  dynamic_library.cpp  dynamic_library.hpp  effect_handler.hpp  handle_manager.cpp  plugin_manager.cpp  plugin_manager.hpp  plugin_metadata.hpp
src/render/: rendering_scheduler.cpp  rendering_scheduler.hpp
src/scheduler/: audio_ring.cpp  delay.cpp  exec_queue.cpp  execution_plan.hpp  live_controller.cpp  rendering_scheduler.cpp  scalar_cache.cpp  scheduler.cpp  split_dag.cpp  topological_sort.cpp  video_cache.cpp
src/util/: dump.hpp  dump_parameters.hpp  logger.hpp
tests/: 01_document_node_io.cpp  01_test_types.cpp  02_test_transformer.cpp  03_test_operations.cpp  04_test_memory.cpp  05_test_dynamic_library.cpp  06_test_plugin_load.cpp  07_test_render_pipeline.cpp  07_test_topological_sort.cpp  08_test_delay_schedule_prop.cpp  08_test_transformer_prop.cpp  09_test_scheduler.cpp  09_test_scheduler_prop.cpp  10_test_cache_controller.cpp  10_test_memory_leak.cpp  CMakeLists.txt  _04_test_memory.cpp  _05_test_dynamic_library.cpp  _06_test_plugin_load.cpp  _09_test_scheduler_prop.cpp  cui_render.cpp  gtest_example.cpp
